--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "setupFiles": [
       "./tests/client/config/jsdom.js",
       "./tests/client/config/enzyme.js"
-    ]
+    ],
+    "testURL": "http://localhost:3000"
   },
   "dependencies": {
     "express": "^4.16.3"
