--- a/package.json
+++ b/package.json
@@ -1,38 +1,46 @@
 {
-  "name": "calculator",
-  "description": "A simple calculator",
+  "name": "restful-react-from-scratch",
   "version": "1.0.0",
-  "repository": "https://github.com/lauren-hart/lauren-calculator",
   "main": "index.js",
-  "author": "Lauren Hart",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon server & yarn build --watch",
     "build": "webpack --config client/webpack.config.js",
-    "test": "jest",
-    "start": "webpack && node server"
+    "test": "jest"
   },
   "babel": {
     "presets": [
       "env",
       "react"
+    ],
+    "plugins": [
+      "babel-plugin-transform-object-rest-spread"
     ]
   },
   "jest": {
     "setupFiles": [
-      "./tests/client/config/jsdom.js",
-      "./tests/client/config/enzyme.js"
-    ],
-    "testURL": "http://localhost:3000"
+      "./test/client/config/jsdom.js",
+      "./test/client/config/enzyme.js"
+    ]
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "accounting": "^0.4.1",
+    "express": "^4.16.3",
+    "knex": "^0.15.2",
+    "moment": "^2.22.2",
+    "pg": "^7.5.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -41,6 +49,7 @@
     "nodemon": "^1.17.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "sqlite3": "^4.0.2",
     "superagent": "^3.8.2",
     "webpack": "3"
   }
