--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon server & yarn build --watch",
-    "build": "webpack --config client/webpack.config.js",
-    "test": "jest"
+    "start": "webpack && node server",
+    "dev": "node server & webpack --watch",
+    "test": "jest --watchAll"
   },
   "babel": {
     "presets": [
@@ -32,7 +32,8 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "webpack-dev-server": "^3.1.9"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
