--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     ]
   },
   "dependencies": {
+    "superagent": "^3.8.2",
+    "express": "^4.16.3"
+  },
+  "devDependencies": {
     "accounting": "^0.4.1",
-    "express": "^4.16.3",
     "knex": "^0.15.2",
     "moment": "^2.22.2",
     "pg": "^7.5.0",
@@ -33,9 +36,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "webpack-dev-server": "^3.1.9"
-  },
-  "devDependencies": {
+    "webpack-dev-server": "^3.1.9",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -51,7 +52,6 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "sqlite3": "^4.0.2",
-    "superagent": "^3.8.2",
     "webpack": "3"
   }
 }
